--- a/index2.html
+++ b/index2.html
@@ -16,26 +16,26 @@
       <img src="pp.jpg" alt="Image 1" class="profil-picture">
     </div>
     <div class="overlay"></div>
-    <h1>Hello, Simmo! Happy Birthday!!</h1> <!-- Ganti dengan teks sesuai keinginan Anda -->
-    <p>"You Are The Best!!"</p>
+    <h1>Hello, Cesi! I love u so much!</h1> <!-- Ganti dengan teks sesuai keinginan Anda -->
+    <p>"I'ts just beta test website!!"</p>
   </section>
   <section class="content" id="content">
     <div class="article">
       <img src="s1.jpg" alt="Image 1">
       <div class="description-container">
-        <p class="description">You Help And Make People Happy!!</p>
+        <p class="description">You need starjade?!!</p>
       </div>
     </div>
     <div class="article">
-      <img src="simmo2.jpg" alt="Image 2">
+      <img src="s3.jpg" alt="Image 2">
       <div class="description-container">
-        <p class="description">You Work Very Well!!</p>
+        <p class="description">You need Primogems?!!</p>
       </div>
     </div>
     <div class="article">
-      <img src="s3.jpg" alt="Image 3">
+      <img src="simmo2.jpg" alt="Image 3">
       <div class="description-container">
-        <p class="description">You still have a long way to go, stay enthusiastic!!</p>
+        <p class="description">Payment!!!</p>
       </div>
     </div>
   </section>
