Update title and heading in index.html

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
-  <title>Welcome To Cesaer</title>
+  <title>hello Amril!! what inside??</title>
 </head>
 <body>
   <div class="background-image">
     <div class="container">
-      <h1>Welcome To Cesaer</h1>
+      <h1>U know what inside??</h1>
       <button type="button" onclick="openLogin()">Open</button>
     </div>
   </div>
