Update birthday message and descriptions in index2.html

--- a/index2.html
+++ b/index2.html
@@ -16,26 +16,26 @@
       <img src="pp.jpg" alt="Image 1" class="profil-picture">
     </div>
     <div class="overlay"></div>
-    <h1>Hello, Cesi! I love u so much!</h1> <!-- Ganti dengan teks sesuai keinginan Anda -->
-    <p>"I'ts just beta test website!!"</p>
+    <h1>HAPPY BIRTHDAY, AMRIL!!</h1> <!-- Ganti dengan teks sesuai keinginan Anda -->
+    <p>"Hope You Well"</p>
   </section>
   <section class="content" id="content">
     <div class="article">
       <img src="s1.jpg" alt="Image 1">
       <div class="description-container">
-        <p class="description">You need starjade?!!</p>
+        <p class="description">You are my jomok friend!!</p>
       </div>
     </div>
     <div class="article">
       <img src="s3.jpg" alt="Image 2">
       <div class="description-container">
-        <p class="description">You need Primogems?!!</p>
+        <p class="description">You are "SOK GANETNG"!!</p>
       </div>
     </div>
     <div class="article">
       <img src="simmo2.jpg" alt="Image 3">
       <div class="description-container">
-        <p class="description">Payment!!!</p>
+        <p class="description">WE ARE FRIEND!!!!!</p>
       </div>
     </div>
   </section>
